# lightway

./: .deepsource.toml  Cargo.toml  Earthfile  README.md  deny.toml  flake.nix
.cargo/: config.toml
.github/workflows/: ci.yaml
lightway-app-utils/: Cargo.toml
lightway-app-utils/examples/: udprelay.rs
lightway-app-utils/src/: iouring.rs  lib.rs  metrics.rs  net.rs  tun.rs
lightway-client/: Cargo.toml  build.rs
lightway-client/src/: args.rs  dns_manager.rs  keepalive.rs  lib.rs  main.rs  routing_table.rs
lightway-client/src/io/: inside.rs
lightway-client/src/io/inside/: tun.rs
lightway-client/src/io/outside/: tcp.rs  udp.rs
lightway-core/: Cargo.toml
lightway-core/src/: connection.rs  context.rs  io.rs  lib.rs  packet_accumulator.rs  utils.rs
lightway-core/src/connection/: builders.rs  event.rs  io_adapter.rs
lightway-core/tests/: connection.rs
lightway-raptor/: Cargo.toml
lightway-raptor/benches/: encoding.rs  raw_computation.rs
lightway-raptor/examples/: basic_usage.rs  loss_test.sh  receiver.rs  sender.rs
lightway-raptor/src/: lib.rs  lightway_data_frame.rs  lightway_raptor.rs  no_raptor.rs
lightway-server/: Cargo.toml  build.rs
lightway-server/src/: args.rs  connection.rs  connection_manager.rs  io.rs  lib.rs  main.rs
lightway-server/src/io/: ffi.rs  inside.rs  outside.rs  tx.rs
test-iouring/: Cargo.toml
test-iouring/src/: main.rs
tests/: Earthfile
tests/e2e/: docker-compose.yml
uring-udp-client/: Cargo.toml
uring-udp-client/src/: main.rs
uring-udp-server/: Cargo.toml
uring-udp-server/src/: main.rs
(+5 files in other folders)
