[package]
name = "lightway-raptor"
version = "0.1.0"
edition = "2021"

[dependencies]
raptorq = { version = "2.0.0", features = ["serde", "serde_support"] }
rand = "0.9.0-beta.0"
anyhow = "1.0.94"
tokio = { version = "1.42.0", features = ["macros", "time", "net", "rt-multi-thread"]}
time = "0.3.37"
criterion = { version = "0.5.1", features = ["async_tokio"] }

[lints]
workspace = true

[[bench]]
name = "encoding"
harness = false